[gd_scene load_steps=14 format=3 uid="uid://2ryiy7bbn55i"]

[ext_resource type="PackedScene" uid="uid://8js6lj7t2xty" path="res://scenes/3d/board_cell_3d.tscn" id="1_80kwy"]
[ext_resource type="Script" path="res://scripts/3d/cells_parent_3d.gd" id="1_ebh4i"]
[ext_resource type="Script" path="res://scripts/3d/board_3d.gd" id="1_sc1wp"]
[ext_resource type="Script" path="res://scripts/3d/board_creator_3d.gd" id="1_wf7qt"]
[ext_resource type="Script" path="res://scripts/3d/cells_manager_3d.gd" id="2_1qqbh"]
[ext_resource type="Resource" uid="uid://w8ur2oaq7rpo" path="res://resources/initial_state_default.tres" id="2_i7pd3"]
[ext_resource type="PackedScene" uid="uid://crcg846yilqdv" path="res://scenes/board_state.tscn" id="4_ch6ci"]
[ext_resource type="PackedScene" uid="uid://crn1w7viex67d" path="res://scenes/cell_data_pool.tscn" id="4_q7gkl"]
[ext_resource type="Script" path="res://scripts/3d/board_busy_tracker.gd" id="7_bylm5"]
[ext_resource type="Script" path="res://scripts/3d/flip_processor.gd" id="8_rt8fx"]
[ext_resource type="Resource" uid="uid://c5gfjl10d81hu" path="res://resources/empty_counter_data.tres" id="9_i6vqj"]
[ext_resource type="Resource" uid="uid://pqc052my8ydx" path="res://resources/black_counter_data.tres" id="12_ls45f"]
[ext_resource type="Resource" uid="uid://bkeyonx1jyci4" path="res://resources/white_counter_data.tres" id="13_u6iyn"]

[node name="Board3D" type="Node3D"]
script = ExtResource("1_sc1wp")
initial_state = ExtResource("2_i7pd3")

[node name="BoardCreator3D" type="Node" parent="." node_paths=PackedStringArray("cells_parent_3d", "cells_manager_3d", "cell_data_pool")]
unique_name_in_owner = true
script = ExtResource("1_wf7qt")
cells_parent_3d = NodePath("../CellsParent3D")
cells_manager_3d = NodePath("../CellsManager3D")
cell_data_pool = NodePath("../CellDataPool")

[node name="BoardState" parent="." node_paths=PackedStringArray("board_creator") instance=ExtResource("4_ch6ci")]
unique_name_in_owner = true
board_creator = NodePath("../BoardCreator3D")

[node name="CellDataPool" parent="." instance=ExtResource("4_q7gkl")]
unique_name_in_owner = true

[node name="CellsManager3D" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_1qqbh")

[node name="BoardBusyTracker" type="Node" parent="." node_paths=PackedStringArray("cells_manager_3d")]
unique_name_in_owner = true
script = ExtResource("7_bylm5")
cells_manager_3d = NodePath("../CellsManager3D")

[node name="FlipProcessor" type="Node" parent="." node_paths=PackedStringArray("board_state", "cell_data_pool", "cells_manager")]
unique_name_in_owner = true
script = ExtResource("8_rt8fx")
board_state = NodePath("../BoardState")
cell_data_pool = NodePath("../CellDataPool")
cells_manager = NodePath("../CellsManager3D")

[node name="CellsParent3D" type="Node3D" parent="."]
script = ExtResource("1_ebh4i")
board_cell_scene = ExtResource("1_80kwy")

[node name="Cell3D0" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")

[node name="Cell3D1" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 1

[node name="Cell3D2" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 2

[node name="Cell3D3" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 3

[node name="Cell3D4" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 4

[node name="Cell3D5" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 5

[node name="Cell3D6" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 6

[node name="Cell3D7" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -3.5)
cell_data = ExtResource("9_i6vqj")
index = 7

[node name="Cell3D8" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 8

[node name="Cell3D9" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 9

[node name="Cell3D10" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 10

[node name="Cell3D11" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 11

[node name="Cell3D12" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 12

[node name="Cell3D13" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 13

[node name="Cell3D14" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 14

[node name="Cell3D15" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -2.5)
cell_data = ExtResource("9_i6vqj")
index = 15

[node name="Cell3D16" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 16

[node name="Cell3D17" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 17

[node name="Cell3D18" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 18

[node name="Cell3D19" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 19

[node name="Cell3D20" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 20

[node name="Cell3D21" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 21

[node name="Cell3D22" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 22

[node name="Cell3D23" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -1.5)
cell_data = ExtResource("9_i6vqj")
index = 23

[node name="Cell3D24" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 24

[node name="Cell3D25" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 25

[node name="Cell3D26" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 26

[node name="Cell3D27" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5)
cell_data = ExtResource("12_ls45f")
index = 27

[node name="Cell3D28" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.5)
cell_data = ExtResource("13_u6iyn")
index = 28

[node name="Cell3D29" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 29

[node name="Cell3D30" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 30

[node name="Cell3D31" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -0.5)
cell_data = ExtResource("9_i6vqj")
index = 31

[node name="Cell3D32" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 32

[node name="Cell3D33" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 33

[node name="Cell3D34" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 34

[node name="Cell3D35" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5)
cell_data = ExtResource("13_u6iyn")
index = 35

[node name="Cell3D36" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
cell_data = ExtResource("12_ls45f")
index = 36

[node name="Cell3D37" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 37

[node name="Cell3D38" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 38

[node name="Cell3D39" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 0.5)
cell_data = ExtResource("9_i6vqj")
index = 39

[node name="Cell3D40" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 40

[node name="Cell3D41" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 41

[node name="Cell3D42" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 42

[node name="Cell3D43" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 43

[node name="Cell3D44" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 44

[node name="Cell3D45" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 45

[node name="Cell3D46" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 46

[node name="Cell3D47" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 1.5)
cell_data = ExtResource("9_i6vqj")
index = 47

[node name="Cell3D48" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 48

[node name="Cell3D49" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 49

[node name="Cell3D50" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 50

[node name="Cell3D51" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 51

[node name="Cell3D52" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 52

[node name="Cell3D53" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 53

[node name="Cell3D54" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 54

[node name="Cell3D55" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 2.5)
cell_data = ExtResource("9_i6vqj")
index = 55

[node name="Cell3D56" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 56

[node name="Cell3D57" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 57

[node name="Cell3D58" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 58

[node name="Cell3D59" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 59

[node name="Cell3D60" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 60

[node name="Cell3D61" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 61

[node name="Cell3D62" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 62

[node name="Cell3D63" parent="CellsParent3D" instance=ExtResource("1_80kwy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, 3.5)
cell_data = ExtResource("9_i6vqj")
index = 63
